--- a/pages/index.html
+++ b/pages/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <%- include('./layout/header'); -%>
-    <%- include('./layout/banner'); -%>
 
+    <%- include('./layout/banner'); -%>
 <!-- 聯絡我們 -->
 <div class="contact bg-primary-500">
   <div class="container">
@@ -32,7 +32,7 @@
   </div>
 </div>
 <!-- 選角色 -->
-<div class="container-fulid bg-black text-white">
+<!-- <div class="container-fulid bg-black text-white">
   <div class="row">
     <div class="col-3">
       <a href="#" class="text-white flex-column justify-content-center align-items-center px-40 pt-24 pb-56">
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-</div>
+</div> -->
 
 
     <!-- <%- include('./layout/footer'); -%> -->
@@ -75,7 +75,6 @@
           }
         },
       });
-      console.log(window.innerWidth)
     </script>
   </body>
 </html>
