註冊線置中

--- a/pages/register.html
+++ b/pages/register.html
@@ -21,7 +21,7 @@
                     <h3 class="font-shrikhand mb-32">ALPHABOX+</h3>
                     <a href="#" class="btn text-white border border-white w-100 text-center rounded-pill mb-16"><img class="me-10" src="../assets/images/apple.png" alt="">Continue with Apple</a>
                     <a href="#" class="btn text-white border border-white w-100 text-center rounded-pill"><img class="me-10" src="../assets/images/google.png" alt="">Continue with Google</a>
-                    <p class="py-24 or">or</p>
+                    <p class="py-24 or px-4">&ensp;or&ensp;</p>
                     <input class="py-8 px-16 w-100 mb-8 register-input" type="text"  placeholder="姓名">
                     <input class="py-8 px-16 w-100 mb-8 register-input" type="text"  placeholder="EMAIL">
                     <input class="py-8 px-16 w-100 mb-8 register-input" type="text"  placeholder="密碼">
