--- a/pages/news-in.html
+++ b/pages/news-in.html
@@ -17,7 +17,7 @@
       <h1 class="lts-40 lts-lg-48 text-lg-center text-white fw-bold fw-lg-900 fs-lg-3 fs-40 mb-40 mb-lg-60">最新消息</h1>
       <div class="row align-items-center mb-42 mb-lg-60">
         <div class="col-lg-4 mb-18 mb-lg-0">
-          <a class="d-flex align-items-center mb-8" href="./news.html">
+          <a class="d-flex align-items-center mb-8" href="news.html">
             <span class="material-symbols-outlined fs-40 text-white">
               arrow_insert
             </span>
@@ -82,7 +82,7 @@
     </div>
   </section>
 
-  <%- include('./layout/banner'); -%>
+  <%- include('./layout/footer'); -%>
 
   <!-- <%- include('./layout/footer'); -%> -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
