--- a/pages/news.html
+++ b/pages/news.html
@@ -26,7 +26,7 @@
           </picture>
         </div>
         <div class="col-lg-6 mb-16 mb-lg-0">
-          <a href="./news-in.html" class="d-block py-24 py-lg-40 px-16 border-white border-top border-bottom">
+          <a href="news-in.html" class="d-block py-24 py-lg-40 px-16 border-white border-top border-bottom">
             <div class="d-flex align-items-center mb-8">
               <span class="material-icons fs-24 text-white me-16">
                 emergency
@@ -40,7 +40,7 @@
           </a>
         </div>
         <div class="col-lg-2 mt-auto text-end text-lg-start">
-          <a href="./news-in.html">
+          <a href="news-in.html">
             <span class="material-icons fs-40 text-white">
               arrow_forward
             </span>
@@ -187,7 +187,7 @@
     </div>
   </section>
 
-  <%- include('./layout/banner'); -%>
+  <%- include('./layout/footer'); -%>
 
   <!-- <%- include('./layout/footer'); -%> -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
